@@ -48,7 +48,8 @@ directory
 <p></p>
 <h3>Updating a previous version.<br>
 </h3>
-If you are updating from a previous source version already installed on your system it is best
+If you are updating from a previous source version already installed on
+your system it is best
 that you first uninstall the previous version first before you install
 the upgraded version. Doing this will better ensure a problem free
 upgrade. Many upgrade errors can be caused by old plugins and libraries
@@ -61,10 +62,12 @@ automatically by the package installer.<br>
 <br>
 <br>
 <br>
-<a href="toc.html"><img
- src="home.png" alt="Home" border="0" height="32" width="32"></a>
-<a href="intro.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
-<a href="quick.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
-<a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a>
+&nbsp;
+<a href="intro.html" target="_self"><img src="back.png" alt="Back"
+ border="0" height="32" width="32"></a><a href="quick.html"
+ target="_self"><img src="next.png" alt="Next" border="0" height="32"
+ width="32"></a>
+<a href="toc.html"><img src="home.png" alt="Home" border="0" height="32"
+ width="32"></a>
 </body>
 </html>
