@@ -35,11 +35,12 @@ not stacked will be plotted here. eg. MACD, RSI etc.<br>
 <p><img style="width: 821px; height: 778px;" alt="" src="main.png"><br>
 </p>
 <br>
-
-<a href="toc.html"><img
- src="home.png" alt="Home" border="0" height="32" width="32"></a>
-<a href="quick.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
-<a href="title.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
-<a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a>
+&nbsp;
+<a href="quick.html" target="_self"><img src="back.png" alt="Back"
+ border="0" height="32" width="32"></a><a href="title.html"
+ target="_self"><img src="next.png" alt="Next" border="0" height="32"
+ width="32"></a>
+<a href="toc.html"><img src="home.png" alt="Home" border="0" height="32"
+ width="32"></a>
 </body>
 </html>
