@@ -46,11 +46,12 @@ familiar with how Qtstalker works.</li>
 <p></p>
 <p></p>
 <br>
-
-<a href="toc.html"><img
- src="home.png" alt="Home" border="0" height="32" width="32"></a>
-<a href="install.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
-<a href="main.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
-<a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a>
+&nbsp;
+<a href="install.html" target="_self"><img src="back.png" alt="Back"
+ border="0" height="32" width="32"></a><a href="main.html"
+ target="_self"><img src="next.png" alt="Next" border="0" height="32"
+ width="32"></a>
+<a href="toc.html"><img src="home.png" alt="Home" border="0" height="32"
+ width="32"></a>
 </body>
 </html>
