@@ -1081,6 +1081,10 @@ void CME::methodChanged (const QString & d)
     symbolCombo->setEnabled(TRUE);
 }
 
+//*************************************************************
+//*************************************************************
+//*************************************************************
+
 QuotePlugin * createQuotePlugin ()
 {
   CME *o = new CME;
