@@ -636,6 +636,10 @@ void COT::saveSettings ()
   settings.endGroup();
 }
 
+//*************************************************************
+//*************************************************************
+//*************************************************************
+
 QuotePlugin * createQuotePlugin ()
 {
   COT *o = new COT;
